# OSXView

./: .gitignore  CMakeLists.txt  Display.cpp  Display.h  Info.plist  README.md  SystemMetrics.cpp  SystemMetrics.h  build.sh  create_bundle.cmake  create_icon.py  create_icon_simple.py  main.cpp
